# penguin

./: .gitignore  CMakeLists.txt  LICENSE  List.txt  README.md  blah  fileCreate.txt
.cache/clangd/index/: _fixes.hpp.A40C8FCFD29402D3.idx  _vectorize.hpp.F0D84A8B4C1BC6F4.idx  camera.cpp.2BC281253194F275.idx  camera.h.F1949F33C870C29C.idx  common.hpp.5C9EDEFE0698D5A2.idx  component_wise.hpp.A532B2166AC3FF6A.idx  component_wise.inl.65D79EFBB3A86854.idx  compute_common.hpp.FF63C8975401CA80.idx  compute_vector_decl.hpp.F010F45AFCC23993.idx  compute_vector_relational.hpp.AC831D88C88704B5.idx  constants.hpp.67713DCB7F3B764B.idx  constants.inl.FEA96821D57C7F3B.idx  epsilon.hpp.7D43FC13CC09B092.idx  epsilon.inl.2BDC6D25D6A2C954.idx  exponential.hpp.905240A807E07250.idx  func_common.inl.08F3602ABA6B498A.idx  func_exponential.inl.F753FAA0B268F12D.idx  func_geometric.inl.4653855106467177.idx  func_integer.inl.AD90B763D82E8F28.idx  func_matrix.inl.C91027A68116570B.idx  func_packing.inl.11566B795771B28A.idx  func_trigonometric.inl.A8AB6620057C975C.idx  func_vector_relational.inl.BB8E88CEC3625D85.idx  fwd.hpp.35907922954979A6.idx  (+194 more)
lib/glad/: glad.h
shader/: light.frag  shader.frag  shader.vert
src/: glad.c  main.cpp
src/cat/: cat.txt
src/core/: renderer.cpp  renderer.h
src/loader/: loader.cpp  loader.h
src/player/: camera.cpp  camera.h  player.cpp  player.h
src/shader/: lightManager.cpp  lightManager.h  shader.frag  shader.vert  shaderCompiler.cpp  shaderCompiler.h
src/skybox/: skyManager.cpp  skyManager.h
src/window/: windowManager.cpp  windowManager.h
